--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,12 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
+first_name: Srinivasan
+middle_name:
+last_name: Subramaniyan
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
+  You can reach out to me through email; subramaniyan.4[at]osu[dot]edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
