--- a/.github/workflows/update-citations.yml
+++ b/.github/workflows/update-citations.yml
@@ -2,44 +2,77 @@ name: Update Google Scholar Citations
 
 on:
   schedule:
-    # Run weekly on Sunday at 12:00 AM UTC
     - cron: "0 0 * * 0"
-  workflow_dispatch: # Allow manual triggering
-
-permissions:
-  contents: write # Required for pushing changes back to repo
+  workflow_dispatch:
 
 jobs:
   update-citations:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.PAT }}
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.13"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      - name: Run citation update script
+          pip install -r requirements.txt
+      - name: Save current citations.yml hash
+        id: before
         run: |
-          python bin/update_scholar_citations.py
-
+          if [ -f _data/citations.yml ]; then
+            sha_before=$(sha256sum _data/citations.yml | awk '{print $1}')
+            echo "sha_before=$sha_before" >> $GITHUB_OUTPUT
+          else
+            echo "sha_before=none" >> $GITHUB_OUTPUT
+          fi
+      - name: Run citation update script
+        id: run_citation_update
+        shell: bash
+        run: |
+          success=0
+          for i in {1..3}; do
+            echo "Attempt $i to update citations..."
+            timeout 90 python bin/update_scholar_citations.py
+            status=$?
+            if [ $status -eq 0 ]; then
+              echo "Citation update script ran successfully on attempt $i." >> $GITHUB_STEP_SUMMARY
+              success=1
+              break
+            else
+              echo "Retry $i failed (exit code: $status)"
+            fi
+          done
+          if [ $success -ne 1 ]; then
+            echo " Citation update script failed after 3 attempts." >> $GITHUB_STEP_SUMMARY
+          fi
+      - name: Save new citations.yml hash
+        id: after
+        run: |
+          if [ -f _data/citations.yml ]; then
+            sha_after=$(sha256sum _data/citations.yml | awk '{print $1}')
+            echo "sha_after=$sha_after" >> $GITHUB_OUTPUT
+          else
+            echo "sha_after=none" >> $GITHUB_OUTPUT
+          fi
+      - name: Report citations.yml change in summary
+        run: |
+          if [ "${{ steps.before.outputs.sha_before }}" != "${{ steps.after.outputs.sha_after }}" ]; then
+            echo " _data/citations.yml was updated." >> $GITHUB_STEP_SUMMARY
+          else
+            echo " _data/citations.yml was not changed." >> $GITHUB_STEP_SUMMARY
+          fi
       - name: Configure Git
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
       - name: Commit and push if changed
         run: |
           git add _data/citations.yml
-          git diff --staged --quiet || (
-            git commit -m "🔄 Auto-update Google Scholar citations"
-            git push
-          )
+          git diff --staged --quiet || (git commit -m "Update Google Scholar citations" && git push)
