--- a/.github/workflows/update-citations.yml
+++ b/.github/workflows/update-citations.yml
@@ -2,12 +2,13 @@ name: Update Google Scholar Citations
 
 on:
   schedule:
-    - cron: "0 0 * * 0"
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
   update-citations:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -21,58 +22,86 @@ jobs:
 
       - name: Install dependencies
         run: |
+          echo "🔧 Installing dependencies..."
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Save current citations.yml hash
         id: before
         run: |
+          echo " Checking existing citations.yml hash..."
           if [ -f _data/citations.yml ]; then
             sha_before=$(sha256sum _data/citations.yml | awk '{print $1}')
             echo "sha_before=$sha_before" >> $GITHUB_OUTPUT
+            echo " SHA before: $sha_before"
           else
             echo "sha_before=none" >> $GITHUB_OUTPUT
+            echo " No existing citations.yml file found."
           fi
+
       - name: Run citation update script
         id: run_citation_update
         shell: bash
         run: |
+          set +e
+          echo " Starting citation update script..."
           success=0
           for i in {1..3}; do
-            echo "Attempt $i to update citations..."
+            echo " Attempt $i to update citations..."
+            start_time=$(date)
             timeout 90 python bin/update_scholar_citations.py
             status=$?
+            end_time=$(date)
             if [ $status -eq 0 ]; then
-              echo "Citation update script ran successfully on attempt $i." >> $GITHUB_STEP_SUMMARY
+              echo " Success on attempt $i (started at $start_time, ended at $end_time)."
+              echo " Citation update succeeded on attempt $i." >> $GITHUB_STEP_SUMMARY
               success=1
               break
             else
-              echo "Retry $i failed (exit code: $status)"
+              echo " Attempt $i failed with exit code $status (started at $start_time, ended at $end_time)."
             fi
           done
           if [ $success -ne 1 ]; then
+            echo " All 3 attempts to update citations failed."
             echo " Citation update script failed after 3 attempts." >> $GITHUB_STEP_SUMMARY
           fi
+          set -e
+
       - name: Save new citations.yml hash
         id: after
         run: |
+          echo " Checking updated citations.yml hash..."
           if [ -f _data/citations.yml ]; then
             sha_after=$(sha256sum _data/citations.yml | awk '{print $1}')
             echo "sha_after=$sha_after" >> $GITHUB_OUTPUT
+            echo " SHA after: $sha_after"
           else
             echo "sha_after=none" >> $GITHUB_OUTPUT
+            echo " citations.yml was not created or is missing."
           fi
+
       - name: Report citations.yml change in summary
         run: |
+          echo " Comparing citation file hashes..."
           if [ "${{ steps.before.outputs.sha_before }}" != "${{ steps.after.outputs.sha_after }}" ]; then
+            echo " _data/citations.yml was updated."
             echo " _data/citations.yml was updated." >> $GITHUB_STEP_SUMMARY
           else
+            echo " _data/citations.yml was not changed."
             echo " _data/citations.yml was not changed." >> $GITHUB_STEP_SUMMARY
           fi
+
       - name: Configure Git
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
+          echo "🔧 Git configured."
+
       - name: Commit and push if changed
         run: |
           git add _data/citations.yml
-          git diff --staged --quiet || (git commit -m "Update Google Scholar citations" && git push)
+          git diff --staged --quiet || (
+            echo "📤 Committing and pushing changes..."
+            git commit -m "Update Google Scholar citations"
+            git push
+          )
